added slideshow & images, updated index

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,7 +1,7 @@
 <div class="sidebar">
   <div class="container sidebar-sticky">
     <div class="sidebar-about">
-      <img src="{{ site.baseurl }}public/images/logo.png">
+      <a href="{{ site.baseurl }}"><img src="{{ site.baseurl }}public/images/logo.png" border="0"></a>
     </div>
 
     <nav class="sidebar-nav">
