--- a/docs/_layouts/home.html
+++ b/docs/_layouts/home.html
@@ -13,7 +13,7 @@
       <b>SHML</b> is a shell framework for faster and easier script development.
       </div>
       <div align="center">
-        <a href="https://twitter.com/share" class="twitter-share-button" data-url="http://maxcdn.github.io/shml/" data-via="MaxCDNDeveloper" data-size="large" data-related="jdorfman">Tweet</a>&nbsp;&nbsp;&nbsp;
+        <a href="https://twitter.com/share" class="twitter-share-button" data-url="https://maxcdn.github.io/shml/" data-via="MaxCDNDeveloper" data-size="large" data-related="jdorfman">Tweet</a>&nbsp;&nbsp;&nbsp;
         <a href="https://twitter.com/MaxCDN" class="twitter-follow-button" data-show-count="false" data-size="large">Follow @MaxCDN</a>&nbsp;&nbsp;&nbsp;
         <a href="https://twitter.com/MaxCDNDeveloper" class="twitter-follow-button" data-show-count="false" data-size="large">Follow @MaxCDNDeveloper</a>&nbsp;&nbsp;&nbsp;
         <iframe src="https://ghbtns.com/github-btn.html?user=maxcdn&repo=shml&type=watch&count=true&size=large" frameborder="0" scrolling="0" width="135px" height="30px"></iframe>
