--- a/docs/_includes/sidebar.html
+++ b/docs/_includes/sidebar.html
@@ -31,6 +31,6 @@
       <a class="sidebar-nav-item sidebar-nav-indent" href="#Color-Bar">Color Bar</a>
       <a class="sidebar-nav-item" href="https://github.com/MaxCDN/shml" target="_blank">GitHub</a>
     </nav>
-    <span class="sidebar-nav">&copy; 2013-{{ site.time | date: '%Y' }} <a href="http://www.maxcdn.com/open-source?utm_source=SHML&utm_medium=footer-link">MaxCDN</a> | v{{ site.version }}</span>
+    <span class="sidebar-nav">&copy; 2013-{{ site.time | date: '%Y' }} <br> <a href="http://www.maxcdn.com/open-source?utm_source=SHML&utm_medium=footer-link">ol' dirty bashnerds</a> | v{{ site.version }}</span>
   </div>
 </div>
