--- a/docs/_includes/sidebar.html
+++ b/docs/_includes/sidebar.html
@@ -1,7 +1,7 @@
 <div class="sidebar">
   <div class="container sidebar-sticky">
     <div class="sidebar-about">
-      <a href="{{ site.baseurl }}"><img src="{{ site.baseurl }}public/images/logo.png" border="0"></a>
+      <a href="{{ site.baseurl }}"><img src="{{ site.baseurl }}public/images/odb-shml-logo.svg" border="0"></a>
     </div>
 
     <nav class="sidebar-nav">
