--- a/docs/_includes/index-sidebar.html
+++ b/docs/_includes/index-sidebar.html
@@ -1,7 +1,7 @@
 <div class="sidebar">
   <div class="container sidebar-sticky">
     <div class="sidebar-about">
-      <img src="{{ site.baseurl }}public/images/logo.png">
+      <img src="{{ site.baseurl }}public/images/odb-shml-logo.svg" border="0">
     </div>
 
     <nav class="sidebar-nav">
